avoid box shadows being cut off

--- a/frontend/src/components/menu/categoryResult/CategoryResult.css
+++ b/frontend/src/components/menu/categoryResult/CategoryResult.css
@@ -48,5 +48,5 @@
     display: flex;
     flex-direction: row;
     overflow-x: scroll;
-    padding: 0px 10px 0px 10px;
+    padding: 10px;
 }
